test/valid/test0091.d
//T has-passed:yes
//T compiles:no

int main() {
	for (int a = 1; a < 10; a++) {
		a++;
	}

	return a;
}
